add:category endpoints and utils
