# internal/domain/handler.go
@@ -3,4 +3,5 @@ package domain
 type Handler interface {
 	Auth() AuthHandler
 	User() UserHandler
+	Category() CategoryHandler
 }
